.istio/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simple-app-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-app-service
spec:
  hosts:
  - "*"
  gateways:
  - simple-app-service-gateway
  http:
  - route:
    - destination:
        host: simple-app-service
        port:
          number: 3001
